--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
-           <div id="vid_62d3f7bd6008c2000ba714f7" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62d3f7bd6008c2000ba714f7" src="https://images.converteai.net/47fb808f-62e6-4528-8b72-30ffa03fd219/players/62d3f7bd6008c2000ba714f7/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62d3f7bd6008c2000ba714f7" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62d3f7bd6008c2000ba714f7">var s=document.createElement("script");s.src="https://scripts.converteai.net/47fb808f-62e6-4528-8b72-30ffa03fd219/players/62d3f7bd6008c2000ba714f7/player.js",s.async=!0,document.head.appendChild(s);</script>
+           <div id="vid_62d590706008c2000ba715c5" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62d590706008c2000ba715c5" src="https://images.converteai.net/47fb808f-62e6-4528-8b72-30ffa03fd219/players/62d590706008c2000ba715c5/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62d590706008c2000ba715c5" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62d590706008c2000ba715c5">var s=document.createElement("script");s.src="https://scripts.converteai.net/47fb808f-62e6-4528-8b72-30ffa03fd219/players/62d590706008c2000ba715c5/player.js",s.async=!0,document.head.appendChild(s);</script>
+
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/HkrDVPl" class="a-btn" style="text-decoration: none;">
@@ -457,7 +458,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1883000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, ); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
