--- a/página de vendas/index.html
+++ b/página de vendas/index.html
@@ -27,26 +27,20 @@
       }
     </style>
     
-    <!-- Meta Pixel Code -->
-    <script>
-      !function(f,b,e,v,n,t,s)
-      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)}(window, document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '671840113939919');
-      fbq('init', '902207957134621');
-      fbq('init', '1060746161440914');
-      fbq('init', '649325786402999');
-      fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=671840113939919&ev=PageView&noscript=1"
-    /></noscript>
-    <!-- End Meta Pixel Code -->
+     <!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '4966070643499040');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="
     
   </head>
   <body>
@@ -62,10 +56,11 @@
             <h3 class="my-4"><b>6 ingredientes Simples Que Fazem O Corpo Queimar Até 13Kg Em 30 Dias</b></h3>
 
             <!-- VSL -->
-           <div id="vid_62d3f7bd6008c2000ba714f7" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62d3f7bd6008c2000ba714f7" src="https://images.converteai.net/47fb808f-62e6-4528-8b72-30ffa03fd219/players/62d3f7bd6008c2000ba714f7/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62d3f7bd6008c2000ba714f7" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62d3f7bd6008c2000ba714f7">var s=document.createElement("script");s.src="https://scripts.converteai.net/47fb808f-62e6-4528-8b72-30ffa03fd219/players/62d3f7bd6008c2000ba714f7/player.js",s.async=!0,document.head.appendChild(s);</script>
+           <div id="vid_62d590706008c2000ba715c5" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_62d590706008c2000ba715c5" src="https://images.converteai.net/47fb808f-62e6-4528-8b72-30ffa03fd219/players/62d590706008c2000ba715c5/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_62d590706008c2000ba715c5" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_62d590706008c2000ba715c5">var s=document.createElement("script");s.src="https://scripts.converteai.net/47fb808f-62e6-4528-8b72-30ffa03fd219/players/62d590706008c2000ba715c5/player.js",s.async=!0,document.head.appendChild(s);</script>
+
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/HkrDVPl" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/m6GJVxo" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -442,7 +437,7 @@
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/HkrDVPl" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/m6GJVxo" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
@@ -457,7 +452,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1883000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1.295.000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
