--- a/página de vendas/inicio/index.html
+++ b/página de vendas/inicio/index.html
@@ -20,7 +20,7 @@
   fbq ( 'track' ,  'AddToCart' ) ;
 </ script >
 < noscript > < img  height =" 1 " width =" 1 " style =" display:none "
-  src =" https://www.facebook.com/tr?id=4966070643499040&ev=PageView&noscript=1 "
+  src =" https://www.facebook.com/tr?id=4966070643499040&ev=AddToCart&noscript=1 "
 /> </ noscript >
 <!-- Código de meta pixel final -->
   
