--- a/página de vendas/index.html
+++ b/página de vendas/index.html
@@ -38,10 +38,10 @@
   s . parentNode . insertBefore ( t , s ) } ( window ,  document , 'script' ,
   'https://connect.facebook.net/en_US/fbevents.js' ) ;
   fbq ( 'iniciar' ,  '4966070643499040' ) ;
-  fbq ( 'track' ,  'AddToCart' ) ;
+  fbq ( 'track' ,  'PageView' ) ;
 </ script >
 < noscript > < img  height =" 1 " width =" 1 " style =" display:none "
-  src =" https://www.facebook.com/tr?id=4966070643499040&ev=AddToCart&noscript=1 "
+  src =" https://www.facebook.com/tr?id=4966070643499040&ev=PageView&noscript=1 "
 /> </ noscript >
 <!-- Código de meta pixel final -->
   
