--- a/página de vendas/index.html
+++ b/página de vendas/index.html
@@ -27,23 +27,23 @@
       }
     </style>
     
-      <!-- Código Meta Pixel -->
-< roteiro >
-  ! função ( f , b , e , v , n , t , s )
-  { if ( f.fbq ) return ; _ _ n = f . fbq = função ( ) { n . callMethod ?
-  n . callMethod . aplicar ( n , argumentos ) : n . fila . push ( argumentos ) } ;
-  if ( ! f . _fbq ) f . _fbq = n ; n . empurrar = n ; n . carregado = ! 0 ; n . versão = '2.0' ;
-  n . fila = [ ] ; t = b . createElement ( e ) ; t . assíncrono = ! 0 ;
-  t . src = v ; s = b . getElementsByTagName ( e ) [ 0 ] ;
-  s . parentNode . insertBefore ( t , s ) } ( window ,  document , 'script' ,
-  'https://connect.facebook.net/en_US/fbevents.js' ) ;
-  fbq ( 'iniciar' ,  '4966070643499040' ) ;
-  fbq ( 'track' ,  'PageView' ) ;
-</ script >
-< noscript > < img  height =" 1 " width =" 1 " style =" display:none "
-  src =" https://www.facebook.com/tr?id=4966070643499040&ev=PageView&noscript=1 "
-/> </ noscript >
-<!-- Código de meta pixel final -->
+   <!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '4966070643499040');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=4966070643499040&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
   
   </head>
   <body>
