--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
   fbq('init', '4966070643499040');
-  fbq('track', 'AddToCart');
+  fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
   src="https://www.facebook.com/tr?id=4966070643499040&ev=PageView&noscript=1"
